style.css
/* ... */
html, body {
    margin: 0;
    padding: 0;
}

body {
    color: white;
    background-color: #010001;
    width: 100%;
    height: 100%;
}

a {
    text-decoration: none;
    color: inherit;

}

.menu-desktop a {
    padding: 20px;
}

.menu-desktop a:not(:last-child):hover {
    transform: scale(1.05);
    color: rgb(229, 229, 160);
}

header {
    position: fixed;
    width: 100%;
    top: 0;
    background-color: #da3026;
    font-family: "Roboto", serif;
    font-weight: 600;
    z-index: 999;
    border-bottom: 2px solid black;
}

.logo {
    display: flex;
    align-items: center;
    padding-left: 80px;
    flex: 1;
}

@media (max-width: 1000px) {
    .logo {
        padding-left: 40px;
        flex: 0;
    }
}

.logo-text {
    font-family: "Chakra Petch", sans-serif;;
    margin: 0;
    line-height: 15px;
    padding: 0;
    padding-left: 5px;
    color: #330503;
    font-weight: 900;
    font-size: 18px;
}

header img {
    width: 50px;
    border-radius: 100%;

}

@media (max-width: 1000px) {
    header img {
        width: 50px;
        padding-top: 5px;
        
    }
}

.header-desktop {
    display: flex;
}

.black-link {
    background-color: black;
    border: 5px solid #da3026;
}

.black-link:hover {
    background-color: white;
    color: black;
}

.menu-desktop {
    flex: 2;
    display: flex;

    justify-content: space-evenly;
}

@media (max-width: 1000px) {
    .menu-desktop {
        display: none;
    }
}

main section {
    margin-left: 60px ;
    margin-right: 60px ;
}

@media (max-width: 1000px) {
    main section {
        margin-left: 20px ;
        margin-right: 20px ;
    }
}

main {
    width: 100%;
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow: hidden;
}

@media (min-width: 1600px) {
    main {
        display: flex;
        flex-direction: column;
        align-items: center;

    }
}

@media (min-width: 1600px) {
    main section {
        margin-bottom: 100px;
        margin-left: 0px ;
        margin-right: 0px ;
        width: 1380px;
    }
}

h1 {
    font-family: "Oswald", sans-serif;
    font-weight: 900;
    font-size: 60px;
    margin-bottom: 50px;
}

@media (max-width: 1000px) {
    h1 {
      font-size: 36px;  
    }
}

@media (min-width: 1280px) {
    h1 {
        font-size: 100px;
    }
}

.dobra1-titulo h2 {
    font-family: "Oswald", sans-serif;
    font-weight: 300;
    border-bottom: 1px solid white;
    padding-bottom: 40px;
}


p {
    font-family: "Playfair Display", serif;
    margin-bottom: 50px;
}

button {
    background-color: #da2f26;
    padding: 10px;
    border: 0px;
    border-radius: 8px;
    color: white;
    font-weight: 600;
    cursor: pointer;
    transition: transform 0.3s ease;

}

@media (min-width: 1280px) {
    button {
        font-size: 16px;
        padding: 20px;
    }
}

main section {
    z-index: 5;
}

.background-img {
    position: absolute;
    background-image: url('images/global\ from\ srip.png');
    background-repeat: no-repeat;
    z-index: 0;
    top: 100px;
    right: 0px;
    opacity: 0.2;
    width: 100%;
    height: 100%;
    background-attachment: fixed;
    background-size: contain;
    background-position: center;
    overflow: hidden;
}

.dobra1-titulo {
    margin-top: 200px;
    font-weight: 600;
    height: 600px;
    scroll-margin-top: 200px;
    z-index: 10;
    position: relative;

}


.dobra1-img {
    width: 100%;

}

.dobra1-titulo button {
    margin-bottom: 10px;
}

.secondary-button {
    background-color: white;
    padding: 15px;
    border: 0px;
    border-radius: 8px;
    color: black;
    font-weight: 600;
    cursor: pointer;
    transition: transform 0.3s ease;
}

@media (max-width: 1000px) {
    .dobra1-titulo {
        margin-top: 100px;
    }
}

@media (min-width: 1280px) {
    .dobra1-titulo {
        margin-bottom: 300px;
    }
}

.dobra1-titulo p {
    width: 60%;
}

@media (max-width: 1000px) {
    .dobra1-titulo p {
      width: 100%; 
      font-size: 18px;
      font-weight: 100;
    }
}




.dobra2-saiba-mais {
    display: block;
    text-align: center;
    scroll-margin-top: 100px;
}





.dobra2-wrapper {
    display: flex;
    flex-direction: column;
}

.dobra2-h3 {
    display: flex;
    justify-content: space-between;
}

.dobra2-h3-clicked {
    background-color: #da3026;
    margin: 0;
    padding: 40px 0px;
    flex: 0.33;
    border-radius: 3px;

}

.dobra2-h3-not-clicked {
    background-color: #921e1846;
    margin: 0;
    margin-top: 10px;
    padding: 40px 0px;
    flex: 0.33;
    border-radius: 3px;
    cursor: pointer;

}

.dobra2-toggleable-text {
    display: block;
}

@media (max-width: 600px) {
    .dobra2-toggleable-text {
        display: none;
    }
}

.dobra2-toggleable-text-mobile {
    display: none;
}

@media (max-width: 600px) {
    .dobra2-toggleable-text-mobile {
        display: block;
    }
}



.hidden-text {
    display: flex;
    padding: 20px;
    padding-top: 40px;
    text-align: left;
    border: 1px solid #da3026;
    height: 260px;
}

.hidden-text-mobile img {
    width: 35px;
}

.hidden-text-wrapper {
    flex: 0.33;
    text-align: center;
}

.hidden-text-wrapper-mobile {
    margin: 0;
    padding: 0;
}

.hidden-text img {
    width: 50px;
}

.dobra3-como-funciona {
    border: 1px solid #da3026;
    border-radius: 3px;
    text-align: center;
    scroll-margin-top: 100px;
}

.dobra3-como-funciona h2 {
    background-color: #da3026;
    margin: 0;
    margin-bottom: 20px;
    padding: 0;
}

.dobra3-como-funciona img {
    width: 100px;
}

.dobra3-wrapper {
    display: block;
    align-items: center;
    justify-content: space-around;
    padding-top: 20px;
    padding: 20px;
}

.passo1 {
    display: flex;
    align-items: center;
    margin-bottom: 80px;
}

.passo1-text {
    text-align: left;
    flex: 0.5;
    padding: 0px 100px
}

.mostruario-de-secoes {
    flex: 0.5;
    padding: 0px 100px
}
/* ... */

